# raytracer

raytracer/: .gitignore  CMakeLists.txt  Makefile  README.md  _test2.in  camera.h  compile_commands.json  hittable.h  hittable_list.cpp  hittable_list.hpp  img.ppm  inp.txt  light.cpp  light.h  main.cpp  material.cpp  material.h  parser.cpp  parser.h  ray.h  run.sh  sphere.cpp  sphere.h  surface.cpp  surface.h  test2refractive.in  top.ppm  top.ttm  tracer.cpp  tracer.h  utils.h  vec3.h
raytracer.xcodeproj/: project.pbxproj
